--- a/src/partials/master.html
+++ b/src/partials/master.html
@@ -25,7 +25,7 @@
             <li class="master-seti list">
               <a class="master-seti link" href="">
                 <svg
-                  class="icon-instagram"
+                  class="icon-seti"
                   aria-label="instagram"
                   width="20"
                   height="20"
@@ -37,7 +37,7 @@
             <li class="master-seti list">
               <a class="master-seti link" href="">
                 <svg
-                  class="icon-twitter"
+                  class="icon-seti"
                   aria-label="twitter"
                   width="20"
                   height="20"
@@ -49,7 +49,7 @@
             <li class="master-seti list">
               <a class="master-seti link" href="">
                 <svg
-                  class="icon-facebook"
+                  class="icon-seti"
                   aria-label="facebook"
                   width="20"
                   height="20"
@@ -61,7 +61,7 @@
             <li class="master-seti list">
               <a class="master-seti link" href="">
                 <svg
-                  class="icon-linkedin"
+                  class="icon-seti"
                   aria-label="linkedin"
                   width="20"
                   height="20"
@@ -95,7 +95,7 @@
             <li class="master-seti list">
               <a class="master-seti link" href="">
                 <svg
-                  class="icon-instagram"
+                  class="icon-seti"
                   aria-label="instagram"
                   width="20"
                   height="20"
@@ -107,7 +107,7 @@
             <li class="master-seti list">
               <a class="master-seti link" href="">
                 <svg
-                  class="icon-twitter"
+                  class="icon-seti"
                   aria-label="twitter"
                   width="20"
                   height="20"
@@ -119,7 +119,7 @@
             <li class="master-seti list">
               <a class="master-seti link" href="">
                 <svg
-                  class="icon-facebook"
+                  class="icon-seti"
                   aria-label="facebook"
                   width="20"
                   height="20"
@@ -131,7 +131,7 @@
             <li class="master-seti list">
               <a class="master-seti link" href="">
                 <svg
-                  class="icon-linkedin"
+                  class="icon-seti"
                   aria-label="linkedin"
                   width="20"
                   height="20"
@@ -165,7 +165,7 @@
             <li class="master-seti list">
               <a class="master-seti link" href="">
                 <svg
-                  class="icon-instagram"
+                  class="icon-seti"
                   aria-label="instagram"
                   width="20"
                   height="20"
@@ -177,7 +177,7 @@
             <li class="master-seti list">
               <a class="master-seti link" href="">
                 <svg
-                  class="icon-twitter"
+                  class="icon-seti"
                   aria-label="twitter"
                   width="20"
                   height="20"
@@ -189,7 +189,7 @@
             <li class="master-seti list">
               <a class="master-seti link" href="">
                 <svg
-                  class="icon-facebook"
+                  class="icon-seti"
                   aria-label="facebook"
                   width="20"
                   height="20"
@@ -201,7 +201,7 @@
             <li class="master-seti list">
               <a class="master-seti link" href="">
                 <svg
-                  class="icon-linkedin"
+                  class="icon-seti"
                   aria-label="linkedin"
                   width="20"
                   height="20"
