--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -43,7 +43,7 @@
           волне". Поэтому, мы всегда готовы усовершенствовать каждого, кто к нам
           приходит!
         </p>
-        <button class="about-button" type="button" form="online-form">
+        <button class="about-button" type="button">
           онлайн-запись
         </button>
       </div>
