--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -188,8 +188,7 @@
 }
 
 .onlineform-submit {
-  width: 160px;
-  height: 40px;
+  padding: 12px 38px;
 
   font-family: inherit;
   font-weight: 600;
