--- a/src/sass/_portfolio.scss
+++ b/src/sass/_portfolio.scss
@@ -5,14 +5,14 @@
   background-color: $white-color;
 }
 
-@media screen and (min-width: 481px) {
+@media screen and (min-width: $tablet) {
   .portfolio.section {
     padding-top: 100px;
     padding-bottom: 100px;
   }
 }
 
-@media screen and (min-width: 769px) {
+@media screen and (min-width: $desktop) {
   .portfolio.section {
     padding-top: 130px;
     padding-bottom: 130px;
@@ -26,14 +26,14 @@
   margin-right: auto;
 }
 
-@media screen and (min-width: 481px) {
+@media screen and (min-width: $tablet) {
   .portfolio.container {
     padding-left: 39px;
     padding-right: 39px;
   }
 }
 
-@media screen and (min-width: 769px) {
+@media screen and (min-width: $desktop) {
   .portfolio.container {
     padding-left: 15px;
     padding-right: 15px;
@@ -94,14 +94,14 @@
   }
 }
 
-@media screen and (min-width: 481px) {
+@media screen and (min-width: $tablet) {
   .portfolio-item {
     width: calc((100% - 4 * 15px) / 2);
     margin: 15px;
   }
 }
 
-@media screen and (min-width: 769px) {
+@media screen and (min-width: $desktop) {
   .portfolio-item {
     width: calc((100% - 8 * 15px) / 4);
     margin: 15px;
