--- a/src/sass/components/_about.scss
+++ b/src/sass/components/_about.scss
@@ -3,21 +3,21 @@
   padding-bottom: 84px;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: $tablet) {
   .about.section {
     padding-top: 100px;
     padding-bottom: 100px;
   }
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: $desktop) {
   .about.section {
     padding-top: 130px;
     padding-bottom: 130px;
   }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: $tablet) {
   .about-left-box {
     display: flex;
     width: calc((100% - 30px) / 2);
@@ -30,7 +30,7 @@
   }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: $tablet) {
   .about-foto-box {
     min-width: 330px;
     margin-right: 30px;
@@ -40,7 +40,7 @@
   }
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: $desktop) {
   .about-foto-box {
     display: flex;
     margin-right: 64px;
@@ -48,13 +48,13 @@
   }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: $tablet) {
   .about-second-box {
     min-width: 330px;
   }
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: $desktop) {
   .about-second-box {
     min-width: 500px;
   }
@@ -64,19 +64,19 @@
   list-style: none;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: $tablet) {
   .about-photo:not(:last-child) {
     margin-bottom: 30px;
   }
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: $desktop) {
   .about-photo:not(:last-child) {
     margin-bottom: 0;
   }
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: $desktop) {
   .about-photo:not(:last-child) {
     margin-right: 30px;
   }
@@ -117,7 +117,7 @@
   letter-spacing: 0.05em;
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: $desktop) {
   .about.title {
     font-weight: bold;
     font-size: 42px;
@@ -137,7 +137,7 @@
   color: $secondary-color;
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: $desktop) {
   .about-first.text {
     font-size: 18px;
     line-height: 1.66;
@@ -157,7 +157,7 @@
   padding: 12px 20px;
   font-weight: 600;
   font-size: 12px;
-  line-height: 1.33;
+  line-height: 1.3;
   letter-spacing: 0.09em;
   text-transform: uppercase;
   color: $primery-color;
