--- a/src/sass/components/_about.scss
+++ b/src/sass/components/_about.scss
@@ -3,21 +3,21 @@
   padding-bottom: 84px;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: $tablet) {
   .about.section {
     padding-top: 100px;
     padding-bottom: 100px;
   }
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: $desktop) {
   .about.section {
     padding-top: 130px;
     padding-bottom: 130px;
   }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: $tablet) {
   .about-left-box {
     display: flex;
     width: calc((100% - 30px) / 2);
@@ -30,7 +30,7 @@
   }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: $tablet) {
   .about-foto-box {
     min-width: 330px;
     margin-right: 30px;
@@ -40,7 +40,7 @@
   }
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: $desktop) {
   .about-foto-box {
     display: flex;
     margin-right: 64px;
@@ -48,13 +48,13 @@
   }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: $tablet) {
   .about-second-box {
     min-width: 330px;
   }
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: $desktop) {
   .about-second-box {
     min-width: 500px;
   }
@@ -64,19 +64,19 @@
   list-style: none;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: $tablet) {
   .about-photo:not(:last-child) {
     margin-bottom: 30px;
   }
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: $desktop) {
   .about-photo:not(:last-child) {
     margin-bottom: 0;
   }
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: $desktop) {
   .about-photo:not(:last-child) {
     margin-right: 30px;
   }
@@ -107,6 +107,7 @@
 }
 
 .about.title {
+  font-family: $title-font;
   margin-bottom: 20px;
   margin-top: 0;
 
@@ -116,7 +117,7 @@
   letter-spacing: 0.05em;
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: $desktop) {
   .about.title {
     font-weight: bold;
     font-size: 42px;
@@ -126,15 +127,17 @@
 }
 
 .about-first.text {
+  margin-top: 0;
   margin-bottom: 20px;
 
   font-weight: normal;
   font-size: 16px;
   line-height: 1.6;
   letter-spacing: 0.02em;
+  color: #555555;
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: $desktop) {
   .about-first.text {
     font-size: 18px;
     line-height: 1.7;
@@ -142,23 +145,25 @@
 }
 
 .about-second.text {
+  margin-top: 0;
   margin-bottom: 40px;
   font-size: 14px;
   line-height: 1.8;
   letter-spacing: 0.02em;
+  color: #555555;
 }
 
 .about-button {
+  padding: 12px 20px;
   font-weight: 600;
   font-size: 12px;
-  line-height: 16px;
+  line-height: 1.3;
   letter-spacing: 0.09em;
   text-transform: uppercase;
-  width: 160px;
-  height: 40px;
   background-color: #fff;
   border: 1px solid #ff6c00;
   border-radius: 25px;
+  color: #303030;
   cursor: pointer;
 
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
