--- a/src/sass/components/_portfolio.scss
+++ b/src/sass/components/_portfolio.scss
@@ -71,6 +71,8 @@
 }
 
 .portfolio-ul {
+  margin-top: 0;
+  margin-bottom: 0;
   padding-left: 0;
 }
 
@@ -86,7 +88,7 @@
   list-style: none;
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 767px) {
   .portfolio-item:not(:last-child) {
     margin-bottom: 30px;
   }
