--- a/src/partials/portfolio.html
+++ b/src/partials/portfolio.html
@@ -6,64 +6,156 @@
     </p>
     <ul class="portfolio-ul">
       <li class="portfolio-item">
-        <img
-          srcset="
-            ./images/Rectangle_25-270.jpg 270w,
-            ./images/Rectangle_25-330.jpg 330w,
-            ./images/Rectangle_25-418.jpg 418w,
-            ./images/Rectangle_25-540.jpg 540w,
-            ./images/Rectangle_25-660.jpg 660w,
-            ./images/Rectangle_25-836.jpg 836w
-          "
-          src="./images/Rectangle_25-270.jpg"
-          alt=""
-          sizes="( min-width: 1280px ) 270px, ( min-width: 768px ) 330px, ( min-width: 480px ) 418px"
-        />
+        <picture>
+          <source
+            srcset="
+              ./images/Rectangle_25-270.jpg 1x,
+              ./images/Rectangle_25-540.jpg 2x
+            "
+            media="( min-width: 1280px )"
+          />
+          <source
+            srcset="
+              ./images/Rectangle_25-330.jpg 1x,
+              ./images/Rectangle_25-660.jpg 2x
+            "
+            media="( min-width: 768px )"
+          />
+          <source
+            srcset="
+              ./images/Rectangle_25-418.jpg 1x,
+              ./images/Rectangle_25-836.jpg 2x
+            "
+            media="( max-width: 767px )"
+          />
+          <img
+            srcset="
+              ./images/Rectangle_25-270.jpg 270w,
+              ./images/Rectangle_25-330.jpg 330w,
+              ./images/Rectangle_25-418.jpg 418w,
+              ./images/Rectangle_25-540.jpg 540w,
+              ./images/Rectangle_25-660.jpg 660w,
+              ./images/Rectangle_25-836.jpg 836w
+            "
+            src="./images/Rectangle_25-270.jpg"
+            alt=""
+            sizes="( min-width: 1280px ) 270px, ( min-width: 768px ) 330px, ( min-width: 480px ) 418px"
+          />
+        </picture>
       </li>
       <li class="portfolio-item">
-        <img
-          srcset="
-            ./images/Rectangle_26-270.jpg 270w,
-            ./images/Rectangle_26-330.jpg 330w,
-            ./images/Rectangle_26-418.jpg 418w,
-            ./images/Rectangle_26-540.jpg 540w,
-            ./images/Rectangle_26-660.jpg 660w,
-            ./images/Rectangle_26-836.jpg 836w
-          "
-          src="./images/Rectangle_26-270.jpg"
-          alt=""
-          sizes="( min-width: 1280px ) 270px, ( min-width: 768px ) 330px, ( min-width: 480px ) 418px"
-        />
+        <picture>
+          <source
+            srcset="
+              ./images/Rectangle_26-270.jpg 1x,
+              ./images/Rectangle_26-540.jpg 2x
+            "
+            media="( min-width: 1280px )"
+          />
+          <source
+            srcset="
+              ./images/Rectangle_26-330.jpg 1x,
+              ./images/Rectangle_26-660.jpg 2x
+            "
+            media="( min-width: 768px )"
+          />
+          <source
+            srcset="
+              ./images/Rectangle_26-418.jpg 1x,
+              ./images/Rectangle_26-836.jpg 2x
+            "
+            media="( max-width: 767px )"
+          />
+          <img
+            srcset="
+              ./images/Rectangle_26-270.jpg 270w,
+              ./images/Rectangle_26-330.jpg 330w,
+              ./images/Rectangle_26-418.jpg 418w,
+              ./images/Rectangle_26-540.jpg 540w,
+              ./images/Rectangle_26-660.jpg 660w,
+              ./images/Rectangle_26-836.jpg 836w
+            "
+            src="./images/Rectangle_26-270.jpg"
+            alt=""
+            sizes="( min-width: 1280px ) 270px, ( min-width: 768px ) 330px, ( min-width: 480px ) 418px"
+          />
+        </picture>
       </li>
       <li class="portfolio-item">
-        <img
-          srcset="
-            ./images/Rectangle_27-270.jpg 270w,
-            ./images/Rectangle_27-330.jpg 330w,
-            ./images/Rectangle_27-418.jpg 418w,
-            ./images/Rectangle_27-540.jpg 540w,
-            ./images/Rectangle_27-660.jpg 660w,
-            ./images/Rectangle_27-836.jpg 836w
-          "
-          src="./images/Rectangle_27-270.jpg"
-          alt=""
-          sizes="( min-width: 1280px ) 270px, ( min-width: 768px ) 330px, ( min-width: 480px ) 418px"
-        />
+        <picture>
+          <source
+            srcset="
+              ./images/Rectangle_27-270.jpg 1x,
+              ./images/Rectangle_27-540.jpg 2x
+            "
+            media="( min-width: 1280px )"
+          />
+          <source
+            srcset="
+              ./images/Rectangle_27-330.jpg 1x,
+              ./images/Rectangle_27-660.jpg 2x
+            "
+            media="( min-width: 768px )"
+          />
+          <source
+            srcset="
+              ./images/Rectangle_27-418.jpg 1x,
+              ./images/Rectangle_27-836.jpg 2x
+            "
+            media="( max-width: 767px )"
+          />
+          <img
+            srcset="
+              ./images/Rectangle_27-270.jpg 270w,
+              ./images/Rectangle_27-330.jpg 330w,
+              ./images/Rectangle_27-418.jpg 418w,
+              ./images/Rectangle_27-540.jpg 540w,
+              ./images/Rectangle_27-660.jpg 660w,
+              ./images/Rectangle_27-836.jpg 836w
+            "
+            src="./images/Rectangle_27-270.jpg"
+            alt=""
+            sizes="( min-width: 1280px ) 270px, ( min-width: 768px ) 330px, ( min-width: 480px ) 418px"
+          />
+        </picture>
       </li>
       <li class="portfolio-item">
-        <img
-          srcset="
-            ./images/Rectangle_28-270.jpg 270w,
-            ./images/Rectangle_28-330.jpg 330w,
-            ./images/Rectangle_28-418.jpg 418w,
-            ./images/Rectangle_28-540.jpg 540w,
-            ./images/Rectangle_28-660.jpg 660w,
-            ./images/Rectangle_28-836.jpg 836w
-          "
-          src="./images/Rectangle_28-270.jpg"
-          alt=""
-          sizes="( min-width: 1280px ) 270px, ( min-width: 768px ) 330px, ( min-width: 480px ) 418px"
-        />
+        <picture>
+          <source
+            srcset="
+              ./images/Rectangle_28-270.jpg 1x,
+              ./images/Rectangle_28-540.jpg 2x
+            "
+            media="( min-width: 1280px )"
+          />
+          <source
+            srcset="
+              ./images/Rectangle_28-330.jpg 1x,
+              ./images/Rectangle_28-660.jpg 2x
+            "
+            media="( min-width: 768px )"
+          />
+          <source
+            srcset="
+              ./images/Rectangle_28-418.jpg 1x,
+              ./images/Rectangle_28-836.jpg 2x
+            "
+            media="( max-width: 767px )"
+          />
+          <img
+            srcset="
+              ./images/Rectangle_28-270.jpg 270w,
+              ./images/Rectangle_28-330.jpg 330w,
+              ./images/Rectangle_28-418.jpg 418w,
+              ./images/Rectangle_28-540.jpg 540w,
+              ./images/Rectangle_28-660.jpg 660w,
+              ./images/Rectangle_28-836.jpg 836w
+            "
+            src="./images/Rectangle_28-270.jpg"
+            alt=""
+            sizes="( min-width: 1280px ) 270px, ( min-width: 768px ) 330px, ( min-width: 480px ) 418px"
+          />
+        </picture>
       </li>
     </ul>
   </div>
