--- a/src/partials/master.html
+++ b/src/partials/master.html
@@ -4,20 +4,35 @@
     <h2 class="master title">Наши мастера</h2>
     <ul class="master-ul">
       <li class="master-name">
-        <img
-          class="master-foto"
-          srcset="
-            ./images/John-370.jpg 370w,
-            ./images/John-418.jpg 418w,
-            ./images/John-450.jpg 450w,
-            ./images/John-740.jpg 740w,
-            ./images/John-836.jpg 836w,
-            ./images/John-900.jpg 900w
-          "
-          src="./images/John-370.jpg"
-          alt="John"
-          sizes="( min-width: 1280px ) 370px, ( min-width: 768px ) 450px, (min-width: 480px ) 418px"
-        />
+        <picture>
+          <source
+            srcset="./images/John-370.jpg 1x, ./images/John-740.jpg 2x"
+            media="( min-width: 1280px )"
+          />
+          <source
+            srcset="./images/John-450.jpg 1x, ./images/John-900.jpg 2x"
+            media="( min-width: 768px )"
+          />
+          <source
+            srcset="./images/John-418.jpg 1x, ./images/John-836.jpg 2x"
+            media="( max-width: 767px )"
+          />
+          ​
+          <img
+            class="master-foto"
+            srcset="
+              ./images/John-370.jpg 370w,
+              ./images/John-418.jpg 418w,
+              ./images/John-450.jpg 450w,
+              ./images/John-740.jpg 740w,
+              ./images/John-836.jpg 836w,
+              ./images/John-900.jpg 900w
+            "
+            src="./images/John-370.jpg"
+            alt="John"
+            sizes="( min-width: 1280px ) 370px, ( min-width: 768px ) 450px, (min-width: 480px ) 418px"
+          />
+        </picture>
         <div class="master-content">
           <h3 class="master-title name">John Smith</h3>
           <p class="master-text">Extreme Barber</p>
@@ -74,20 +89,35 @@
         </div>
       </li>
       <li class="master-name">
-        <img
-          class="master-foto"
-          srcset="
-            ./images/Michele-370.jpg 370w,
-            ./images/Michele-418.jpg 418w,
-            ./images/Michele-450.jpg 450w,
-            ./images/Michele-740.jpg 740w,
-            ./images/Michele-836.jpg 836w,
-            ./images/Michele-900.jpg 900w
-          "
-          src="./images/Michele-370.jpg"
-          alt="Michele"
-          sizes="( min-width: 1280px ) 370px, ( min-width: 768px ) 450px, (min-width: 480px ) 418px"
-        />
+        <picture>
+          <source
+            srcset="./images/Michele-370.jpg 1x, ./images/Michele-740.jpg 2x"
+            media="( min-width: 1280px )"
+          />
+          <source
+            srcset="./images/Michele-450.jpg 1x, ./images/Michele-900.jpg 2x"
+            media="( min-width: 768px )"
+          />
+          <source
+            srcset="./images/Michele-418.jpg 1x, ./images/Michele-836.jpg 2x"
+            media="( max-width: 767px )"
+          />
+          ​
+          <img
+            class="master-foto"
+            srcset="
+              ./images/Michele-370.jpg 370w,
+              ./images/Michele-418.jpg 418w,
+              ./images/Michele-450.jpg 450w,
+              ./images/Michele-740.jpg 740w,
+              ./images/Michele-836.jpg 836w,
+              ./images/Michele-900.jpg 900w
+            "
+            src="./images/Michele-370.jpg"
+            alt="Michele"
+            sizes="( min-width: 1280px ) 370px, ( min-width: 768px ) 450px, (min-width: 480px ) 418px"
+          />
+        </picture>
         <div class="master-content">
           <h3 class="master-title name">Michele Doe</h3>
           <p class="master-text">Extreme Barber</p>
@@ -144,20 +174,35 @@
         </div>
       </li>
       <li class="master-name">
-        <img
-          class="master-foto"
-          srcset="
-            ./images/Alan-370.jpg 370w,
-            ./images/Alan-418.jpg 418w,
-            ./images/Alan-450.jpg 450w,
-            ./images/Alan-740.jpg 740w,
-            ./images/Alan-836.jpg 836w,
-            ./images/Alan-900.jpg 900w
-          "
-          src="./images/Alan-370.jpg"
-          alt="Alan"
-          sizes="( min-width: 1280px ) 370px, ( min-width: 768px ) 450px, (min-width: 480px ) 418px"
-        />
+        <picture>
+          <source
+            srcset="./images/Alan-370.jpg 1x, ./images/Alan-740.jpg 2x"
+            media="( min-width: 1280px )"
+          />
+          <source
+            srcset="./images/Alan-450.jpg 1x, ./images/Alan-900.jpg 2x"
+            media="( min-width: 768px )"
+          />
+          <source
+            srcset="./images/Alan-418.jpg 1x, ./images/Alan-836.jpg 2x"
+            media="( max-width: 767px )"
+          />
+          ​
+          <img
+            class="master-foto"
+            srcset="
+              ./images/Alan-370.jpg 370w,
+              ./images/Alan-418.jpg 418w,
+              ./images/Alan-450.jpg 450w,
+              ./images/Alan-740.jpg 740w,
+              ./images/Alan-836.jpg 836w,
+              ./images/Alan-900.jpg 900w
+            "
+            src="./images/Alan-370.jpg"
+            alt="Alan"
+            sizes="( min-width: 1280px ) 370px, ( min-width: 768px ) 450px, (min-width: 480px ) 418px"
+          />
+        </picture>
         <div class="master-content">
           <h3 class="master-title name">Alan Black</h3>
           <p class="master-text">Extreme Barber</p>
