--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -3,30 +3,50 @@
     <div class="about-left-box">
       <ul class="about-foto-box">
         <li class="about-photo">
-          <img
-            srcset="
-              ./images/img1-270.jpg 270w,
-              ./images/img1-330.jpg 330w,
-              ./images/img1-540.jpg 540w,
-              ./images/img1-660.jpg 660w
-            "
-            src="./images/img1-270.jpg"
-            alt=""
-            sizes="( min-width: 1280px ) 270px, ( min-width: 768px ) 330px"
-          />
+          <picture>
+            <source
+              srcset="./images/img1-270.jpg 1x, ./images/img1-540.jpg 2x"
+              media="(min-width: 1280px)"
+            />
+            <source
+              srcset="./images/img1-330.jpg 1x, ./images/img1-660.jpg 2x"
+              media="(min-width: 768px)"
+            />
+            <img
+              srcset="
+                ./images/img1-270.jpg 270w,
+                ./images/img1-330.jpg 330w,
+                ./images/img1-540.jpg 540w,
+                ./images/img1-660.jpg 660w
+              "
+              src="./images/img1-270.jpg"
+              alt=""
+              sizes="( min-width: 1280px ) 270px, ( min-width: 768px ) 330px"
+            />
+          </picture>
         </li>
         <li class="about-photo">
-          <img
-            srcset="
-              ./images/img2-270.jpg 270w,
-              ./images/img2-330.jpg 330w,
-              ./images/img2-540.jpg 540w,
-              ./images/img2-660.jpg 660w
-            "
-            src="./images/img2-270.jpg"
-            alt=""
-            sizes=" ( min-width: 1280px ) 270px, ( min-width: 768px ) 330px"
-          />
+          <picture>
+            <source
+              srcset="./images/img2-270.jpg 1x, ./images/img2-540.jpg 2x"
+              media="(min-width: 1280px)"
+            />
+            <source
+              srcset="./images/img2-330.jpg 1x, ./images/img2-660.jpg 2x"
+              media="(min-width: 768px)"
+            />
+            <img
+              srcset="
+                ./images/img2-270.jpg 270w,
+                ./images/img2-330.jpg 330w,
+                ./images/img2-540.jpg 540w,
+                ./images/img2-660.jpg 660w
+              "
+              src="./images/img2-270.jpg"
+              alt=""
+              sizes="( min-width: 1280px ) 270px, ( min-width: 768px ) 330px"
+            />
+          </picture>
         </li>
       </ul>
       <div class="about-second-box">
