--- a/src/sass/components/_price.scss
+++ b/src/sass/components/_price.scss
@@ -1,8 +1,14 @@
+.price-wrap {
+  background-color: $foto-bgc;
+}
+
 .price {
   margin-left: auto;
   margin-right: auto;
   @extend %section-padding;
   text-align: center;
+
+  max-width: 1280px;
 
   background-color: $foto-bgc;
   background-image: url('../images/price-mobile.png');
@@ -16,17 +22,8 @@
     background-image: url('../images/price-mobile@2x.png');
   }
 
-  @media screen and (min-width: $mobile) {
-    width: $mobile;
-    height: 826px;
-    background-size: $mobile 826px;
-  }
-
   @media screen and (min-width: $tablet) {
-    width: $tablet;
-    height: 858px;
     background-image: url('../images/price-tablet.png');
-    background-size: $tablet 858px;
 
     @media screen and (min-device-pixel-ratio: 2),
       screen and (min-resolution: 192dpi),
@@ -36,9 +33,6 @@
   }
 
   @media screen and (min-width: $desktop) {
-    max-width: 1280px;
-    width: 100%;
-    height: 718px;
     background-image: url('../images/price-desktop.png');
     background-position: center;
     background-size: cover;
